# emu

aemu/: BUILD.bazel
aemu/base/: BUILD.bazel  System.cpp
aemu/base/include/aemu/base/: HealthMonitor.h  LayoutResolver.h
aemu/base/include/aemu/base/async/: AsyncSocket.h  AsyncSocketAdapter.h
aemu/host-common/: BUILD.bazel  address_space_device.cpp  logging.cpp  logging_absl.cpp  vm_operations.cpp
aemu/host-common/include/host-common/: FeatureControlDefGuest.h  FeatureControlDefHost.h  logging.h  vm_operations.h  window_agent.h
aemu/snapshot/: BUILD.bazel
aemu/windows/: BUILD
aemu/windows/includes/dirent/: dirent.h
gfxstream/guest/GoldfishAddressSpace/: goldfish_address_space.cpp
virtual-device/goldfish_drivers/: goldfish_address_space.c
